--- a/index.html
+++ b/index.html
@@ -33,9 +33,54 @@
             <div class="container">
                 <div class="row">
                   <div class="about-col-1">
-                    <!-- <img src="images/xx.png" /> -->
-            </div>
+                    <!-- <img src="images/xx.png" /> --></div>
             <div class ="about-col-2">
+                <h1 class="sub-title">Behind the Dev Team</h1>
+                <p></p>
+                <div class="tab-titles">
+                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p> 
+                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p></div>
+            <!--Skills-->
+            <div class="tab-contents active-tab" id="skills">
+                <ul>
+                    <li><span>Languages</span><br />
+                    • Java
+                    • HTML
+                    • CSS
+                    • JavaScript
+                    </li>   
+                </ul>
+            </div>
+            </div>
+            </div>
+            </div>
+        </div>
+
+        <!--Services-->
+        <div id="services">
+            <div class="cpntainer">
+                <h1 class="sub-title">ABC</h1>
+                <div class="services-list">
+                    <div>
+                        <i class="fa-solid fa-code-fork"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Contact-->
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">Contact Us</h1>
+                        <p>
+                            <i class="fa-solid fa-paper-plane"></i>xyz123@gmail.com
+                        </p>
+                        <p><i class="fa-solid fa-phone"></i>123-456-7890</p>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
