Sev Scale+Survey Hover Fix

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="work-list">
             <!-- Survey Card with Gradient Hover Effect -->
           <div class="work">
-            <div class="severity-container survey-card">
+            <div class="survey-container survey-card">
           <h3>Want a More Accurate Prediction?</h3>
           <p>Click below to fill out the full health survey.</p>
           <a href="survey.html" class="btn" style="margin-top: 20px;">Take Full Survey</a>
